--- a/index.html
+++ b/index.html
@@ -1,11 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>english-janala-practice</title>
-</head>
-<body>
+    <link rel="Shortcut icons" href="./assets/logo.png">
 
+    <!-- ---google font cdn ------- -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@300;400;500;600;700&family=Hind+Siliguri:wght@300;400;500;600;700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Manrope:wght@200..800&family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+
+    <!-- ------- font awasome cdn ------- -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+        integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- ------ inner css ------ -->
+    <link rel="innercss" href="./style.css">
+    <!-- ------- daidy  and tailwind css link ------- -->
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+</head>
+
+<body>
+    <!-- ......... header section ...........  -->
+    <header>
+        <nav class="navbar bg-base-100 shadow-sm px-5">
+            <div class="navbar-start">
+                <div class="dropdown">
+                    <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                            stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M4 6h16M4 12h8m-8 6h16" />
+                        </svg>
+                    </div>
+                    <ul tabindex="0"
+                        class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow">
+                        <li>
+                            <a href=""><i class="fa-solid fa-circle-question"></i>FAQ</a>
+                        </li>
+                        <li>
+                            <a href=""><i class="fa-solid fa-book-open"></i>Learn</a>
+                        </li>
+                        <li>
+                            <a href=""><i class="fa-solid fa-right-from-bracket"></i>Log Out</a>
+                        </li>
+                    </ul>
+                </div>
+                <a class="btn btn-ghost text-xl flex items-center gap-1">
+                    <span class="text-lg font-bold">English </span>
+                    <img src="./assets/logo.png" alt="">
+                    <span class="font-bangla text-lg font-semibold">জানালা</span>
+                </a>
+            </div>
+            <!-- --------nav for sm devices --------- -->
+            <div class="navbar-end hidden lg:flex">
+                <ul class="menu menu-horizontal px-1 space-x-4">
+                    <li>
+                        <a class="btn btn-outline btn-primary" href=""><i
+                                class="fa-solid fa-circle-question"></i>FAQ</a>
+                    </li>
+                    <li>
+                        <a class="btn btn-outline btn-primary" href=""><i class="fa-solid fa-book-open"></i>Learn</a>
+                    </li>
+                    <li>
+                        <a class="btn btn-outline btn-primary" href=""><i class="fa-solid fa-right-from-bracket"></i>Log
+                            Out</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <section
+            class="bannar flex flex-col-reverse md:flex-row justify-between items-center gap-10 w-11/12 mx-auto py-5 ">
+            <div class="desceiption">
+                <h1 class=" text-4xl font-bold mb-8"> <span class="text-[#00bcff]">English</span>is Easy!!</h1>
+                <p class="">আজ থেকেই আপনার ভাষা শেখার যাত্রা শুরু করুন। আপনি যদি নতুন হন অথবা আপনার দক্ষতা বাড়াতে চান,
+                    আমাদের Interactive Lessons আপনাকে নিয়ে যাবে অন্য একটি Level এ</p>
+                <div class=" my-7">
+                    <input class="py-2 px-3 text-sm border-gray-400 rounded-sm" type="text"
+                        placeholder="Enter Your Name"><br>
+                    <input class="py-2 px-3 text-sm my-2  border-gray-400 rounded-sm" type="text"
+                        placeholder="Enter Your password"><br>
+                    <button class="btn btn-primary mt-5">Get Started</button>
+                </div>
+            </div>
+            <div class="hero-img">
+                <img src="./assets/hero-student.png" alt="">
+            </div>
+        </section>
+    </header>
+
+    <!-- ------main section ------- -->
+    <main>
+        <section class="lessons my-20 mx-auto flex flex-col justify-center items-center">
+            <h1 class="text-3xl font-bold"><span class="text-[#00bcff]">Let's </span>Learn Vocabularies</h1>
+            <div id="lesson-container" class=" flex flex-wrap gap-4  my-10 justify-center items-center">
+
+            </div>
+        </section>
+
+        <!-- -----lesson card Showing  section------- -->
+        <section class="bg-[#F8F8F8] p-15">
+            <div id="words-container" class="w-11/12 mx-auto my-10"></div>
+
+        </section>
+    </main>
+
+    <!-- ----- inner js file -- -->
+    <script src="./scripts/index.js"></script>
 </body>
+
 </html>
