card and lesson section update

--- a/index.html
+++ b/index.html
@@ -105,7 +105,15 @@
 
         <!-- -----lesson card Showing  section------- -->
         <section class="bg-[#F8F8F8] p-15">
-            <div id="words-container" class="w-11/12 mx-auto my-10"></div>
+            <div id="words-container" class="w-11/12 mx-auto my-10 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10 flex-cols-3 ">
+                    <!-- ---- dynamic card insert ----  -->
+
+                    <!-- ------ random load page text ----- -->
+                   <div class="random-text text-center col-span-3 font-bangla">
+                      <p class=" text-sm text-gray-400">আপনি এখনো কোন Lesson Select করেন নাই</p>
+                     <h1 class="text-4xl font-bold pt-3">একটি Lesson Select করুন।</h1>
+                   </div>
+            </div>
 
         </section>
     </main>
